--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 卢森堡-7.80MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-420.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-196.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇯🇵 日本-618.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-532.6KB/s(Youtube:不良林), server: gz-cm.wespanl.club, port: 33074, type: vmess, uuid: 4f55901a-626f-3df4-be38-dfa35785355d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz-cm.wespanl.club}}
+  - {name: 🇨🇳 中国-236.6KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-3.22MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-13.38MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.16MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-532.6KB/s(Youtube:不良林), server: gz-cm.wespanl.club, port: 33074, type: vmess, uuid: 4f55901a-626f-3df4-be38-dfa35785355d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz-cm.wespanl.club}}
   - {name: 🇨🇳 中国-209.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-589.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-299.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-204.9KB/s(Youtube:不良林), server: 5.183.176.92, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 卢森堡-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-618.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-589.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
