--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇨🇳 中国-299.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-532.6KB/s(Youtube:不良林), server: gz-cm.wespanl.club, port: 33074, type: vmess, uuid: 4f55901a-626f-3df4-be38-dfa35785355d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz-cm.wespanl.club}}
-  - {name: 🇨🇳 中国-9.99MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇫🇷 法国-429.9KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.46MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-981.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-209.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-901.0KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇦 加拿大-3.37MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 卢森堡-7.54MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
+  - {name: 波兰-900.9KB/s(Youtube:不良林), server: 217.30.10.68, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 波兰-1.14MB/s(Youtube:不良林), server: 217.30.10.68, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.66, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-996.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-981.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.37MB/s(Youtube:不良林)
+      - 卢森堡-7.54MB/s(Youtube:不良林)
+      - 波兰-900.9KB/s(Youtube:不良林)
+      - 波兰-1.14MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 波兰-996.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
